// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> renders an error if loading failed 1`] = `
<div
  class="Home"
>
  <section
    class="EnvieList"
  >
    <h2>
      Ajouter une nouvelle envie
    </h2>
    <form>
      <label
        for="postDomaine"
      >
        Domaine:
        <input
          id="postDomaine"
          name="postDomaine"
          type="text"
          value=""
        />
      </label>
      <label
        for="postEnvies"
      >
        Envies:
        <textarea
          id="postEnvies"
          name="postEnvies"
        />
      </label>
      <label
        for="postPrecisions"
      >
        Precisions:
        <textarea
          id="postPrecisions"
          name="postPrecisions"
        />
      </label>
      <label
        for="postEquipes"
      >
        Equipes:
        <input
          id="postEquipes"
          name="postEquipes"
          type="text"
          value=""
        />
      </label>
      <label
        for="postDateAjout"
      >
        DateAjout:
        <input
          id="postDateAjout"
          name="postDateAjout"
          type="date"
          value=""
        />
      </label>
      <button
        type="button"
      >
        Save Post
      </button>
    </form>
  </section>
  <p>
    Oops, Failed to load list!
  </p>
</div>
`;

exports[`<Home /> renders the <List /> if loading was successful 1`] = `
<div
  class="Home"
>
  <section
    class="EnvieList"
  >
    <h2>
      Ajouter une nouvelle envie
    </h2>
    <form>
      <label
        for="postDomaine"
      >
        Domaine:
        <input
          id="postDomaine"
          name="postDomaine"
          type="text"
          value=""
        />
      </label>
      <label
        for="postEnvies"
      >
        Envies:
        <textarea
          id="postEnvies"
          name="postEnvies"
        />
      </label>
      <label
        for="postPrecisions"
      >
        Precisions:
        <textarea
          id="postPrecisions"
          name="postPrecisions"
        />
      </label>
      <label
        for="postEquipes"
      >
        Equipes:
        <input
          id="postEquipes"
          name="postEquipes"
          type="text"
          value=""
        />
      </label>
      <label
        for="postDateAjout"
      >
        DateAjout:
        <input
          id="postDateAjout"
          name="postDateAjout"
          type="date"
          value=""
        />
      </label>
      <button
        type="button"
      >
        Save Post
      </button>
    </form>
  </section>
  <div
    class="JeuJavList"
  >
    <h4>
      Jeux JAV
    </h4>
    <ul>
      <li>
        6 qui prend!
         - [
        432
        ]
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Home /> renders the loading status if data invalid 1`] = `
<div
  class="Home"
>
  <section
    class="EnvieList"
  >
    <h2>
      Ajouter une nouvelle envie
    </h2>
    <form>
      <label
        for="postDomaine"
      >
        Domaine:
        <input
          id="postDomaine"
          name="postDomaine"
          type="text"
          value=""
        />
      </label>
      <label
        for="postEnvies"
      >
        Envies:
        <textarea
          id="postEnvies"
          name="postEnvies"
        />
      </label>
      <label
        for="postPrecisions"
      >
        Precisions:
        <textarea
          id="postPrecisions"
          name="postPrecisions"
        />
      </label>
      <label
        for="postEquipes"
      >
        Equipes:
        <input
          id="postEquipes"
          name="postEquipes"
          type="text"
          value=""
        />
      </label>
      <label
        for="postDateAjout"
      >
        DateAjout:
        <input
          id="postDateAjout"
          name="postDateAjout"
          type="date"
          value=""
        />
      </label>
      <button
        type="button"
      >
        Save Post
      </button>
    </form>
  </section>
  <p>
    Loading...
  </p>
</div>
`;

exports[`<Home /> renders the loading status if requesting data 1`] = `
<div
  class="Home"
>
  <section
    class="EnvieList"
  >
    <h2>
      Ajouter une nouvelle envie
    </h2>
    <form>
      <label
        for="postDomaine"
      >
        Domaine:
        <input
          id="postDomaine"
          name="postDomaine"
          type="text"
          value=""
        />
      </label>
      <label
        for="postEnvies"
      >
        Envies:
        <textarea
          id="postEnvies"
          name="postEnvies"
        />
      </label>
      <label
        for="postPrecisions"
      >
        Precisions:
        <textarea
          id="postPrecisions"
          name="postPrecisions"
        />
      </label>
      <label
        for="postEquipes"
      >
        Equipes:
        <input
          id="postEquipes"
          name="postEquipes"
          type="text"
          value=""
        />
      </label>
      <label
        for="postDateAjout"
      >
        DateAjout:
        <input
          id="postDateAjout"
          name="postDateAjout"
          type="date"
          value=""
        />
      </label>
      <button
        type="button"
      >
        Save Post
      </button>
    </form>
  </section>
  <p>
    Loading...
  </p>
</div>
`;
